# quTARANG_dep

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  changes.md  make.sh  pyproject.toml
docs/: requirements.txt
docs/source/: conf.py  examples.rst  functions.rst  gpe.rst  gpe.univ.rst  index.rst  introduction.rst  modules.rst  quTARANG.rst  quTARANG.univ.rst  refs.bib  scheme.rst  usage.rst
paper/: paper.md
paper/resources/: paper.bib
src/: rms.hdf5  test.ipynb  test_2D_I.py  test_3D.py  test_3D_I.py  testgpe.py
src/gpe/: IO.py  __init__.py  evolution.py  gpe.py  in_op.py  io_op.py  plotdata.py  set_device.py  wfc.py
src/gpe/bao_data/: 1D_results.txt  2D_I.txt  2D_IV_sx.txt  2D_IV_sy.txt  2D_V.txt  3D_II_a.txt  3D_II_b.txt  3D_I_a.txt  3D_I_b.txt  3D_I_c.txt
src/gpe/univ/: fns.py  grid.py  my_fft.py  params.py
src/output/: ektk.hdf5  energies.h5
src/output/wfc/: wfc_t0.000000.hdf5  wfc_t0.100000.hdf5  wfc_t0.200000.hdf5  wfc_t0.300000.hdf5  wfc_t0.400000.hdf5  wfc_t0.500000.hdf5  wfc_t0.600000.hdf5  wfc_t0.700000.hdf5  wfc_t0.800000.hdf5  wfc_t0.900000.hdf5  wfc_t1.000000.hdf5  wfc_t1.100000.hdf5  wfc_t1.200000.hdf5  wfc_t1.300000.hdf5  wfc_t1.400000.hdf5  wfc_t1.500000.hdf5  wfc_t1.600000.hdf5  wfc_t1.700000.hdf5  wfc_t1.800000.hdf5  wfc_t1.900000.hdf5  wfc_t2.000000.hdf5
src/quTARANG/: IO.py  __init__.py  evolution.py  gpe.py
src/quTARANG/univ/: fns.py  grid.py  my_fft.py  params.py  vortices.py
src/tests/: testgpe.py
src/utils/: collection_pot.py  collection_wfc.py
