[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quTARANG"
version = "0.0.1"
authors = [
  { name="Shawan Kumar Jha", email="shawankumar@iitg.ac.in" },
  { name="Sachin Singh Rawat", email="sachinr@iitk.ac.in"}
]
description = "GPE solver"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
]

[project.urls]
"Homepage" = "https://github.com/sachinrawat2207/quTARANG"
"Bug Tracker" = "https://github.com/sachinrawat2207/quTARANG/issues"